feat: filter review tour (#77)